--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,21 @@ dependencies = [
 test = [
     "pytest>=8.3.5",
 ]
+dev = [
+    "ruff>=0.11.11",
+    "types-requests>=2.32.0.20250515",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
